# url-shortner

./: .gitignore  .pre-commit-config.yaml  README.md
deploy/: namespace.yaml
deploy/config/: grafana.yaml  nginx.yaml  prometheus.yaml
deploy/deployments/: grafana.yaml  jaeger.yaml  nginx.yaml  prometheus.yaml
deploy/k8s/: namespace.yaml
deploy/k8s/deployments/: shortner-service.yaml  ui-service.yaml
deploy/local/: docker-compose.yaml  nginx.conf  redis-users.acl  redis.conf  shortner_config.yaml  ui_config.yaml
deploy/services/: grafana.yaml  jaeger.yaml  prometheus.yaml  shortner-service.yaml
shortner-service/: .pre-commit-config.yaml  Dockerfile  config.yaml  pyproject.toml  requirements.txt  run.py
shortner-service/app/: cache.py  config.py  consumer.py  db.py  dependencies.py  dto.py  log.py  main.py  models.py  security.py  service.py
shortner-service/app/routes/: url.py  user.py
shortner-service/migrations/: env.py
shortner-service/migrations/versions/: 04f4218549fe_added_id_counter_table.py  2c77947f9ab3_seed_id_counter_table.py  70c933bac474_changed_url_expires_in_field_to_nullable.py  ce7b60bf9327_initial_postgresql_migration.py  dcd40f5f8734_initial_setup.py  edd0d3a6a4ba_added_url_click_counts_table.py
shortner-service/scripts/: entrypoint.sh
shortner-service/tests/: conftest.py  test_config.yaml  test_routes.py  test_security.py  test_service.py
ui-service/: Dockerfile  config.yaml  requirements.txt  url-shortner
ui-service/app/: config.py  dependencies.py  dto.py  main.py  routes.py  security.py  service.py
(+10 files in other folders)
